# ip-switch

./: CMakeLists.txt  IPSwitcher.c  README.md  app.manifest  genicon.ps1  resource.rc
.github/workflows/: bulid.yml
src/: main.c  netutil.c  netutil.h  resource.rc
src/.github/workflow/: build.yml
